public/css/layout.css
:root {
	--border-radius: 0.3rem;
	--gap: 1rem;
	--padding: 1rem;
}

html {
	height: 100%;
}

body {
	min-height: 100%;

	background-color: #ffb699;
	background-image: radial-gradient(at 23% 63%, hsla(262, 79%, 64%, 1) 0px, transparent 50%),
		radial-gradient(at 16% 34%, hsla(341, 95%, 60%, 1) 0px, transparent 50%),
		radial-gradient(at 44% 74%, hsla(302, 74%, 79%, 1) 0px, transparent 50%),
		radial-gradient(at 66% 53%, hsla(260, 76%, 63%, 1) 0px, transparent 50%),
		radial-gradient(at 52% 15%, hsla(357, 99%, 60%, 1) 0px, transparent 50%),
		radial-gradient(at 95% 9%, hsla(220, 81%, 68%, 1) 0px, transparent 50%),
		radial-gradient(at 85% 16%, hsla(209, 83%, 70%, 1) 0px, transparent 50%);
}

nav {
	position: sticky;
	top: 0;
	display: flex;
	padding-left: var(--gap);
	padding-right: var(--gap);

	background: color(display-p3 1 1 1 / 0.3);
	backdrop-filter: blur(15px);
	box-shadow: 0 0 10px color(display-p3 0 0 0 / 0.2);

	> ul {
		width: 100%;
		display: flex;
		margin-left: calc(var(--gap) * 2);
		gap: calc(var(--gap) * 2);
		list-style-type: none;
		padding: 0;

		> li {
			display: flex;
			align-items: center;

			> a {
				text-decoration: none;
				font-size: medium;
				font-weight: 500;

				&:hover {
					color: var(--green);
				}
			}
		}
	}

	> ul:nth-of-type(2) {
		justify-content: end;
	}

	> form {
		display: flex;
		align-items: center;
	}
}

ul.clips {
	display: flex;
	flex-wrap: wrap;
	gap: var(--gap);
	list-style-type: none;
	padding: 0;

	> li > div {
		position: relative;
		width: 400px;
		cursor: pointer;

		> span {
			position: absolute;
			background: color-mix(in srgb, var(--background), transparent 30%);
			padding-left: var(--border-radius);
			padding-right: var(--border-radius);

			&:nth-of-type(1) {
				top: var(--border-radius);
				left: var(--border-radius);
			}

			&:nth-of-type(2) {
				bottom: var(--border-radius);
				left: var(--border-radius);
			}

			&:nth-of-type(3) {
				bottom: var(--border-radius);
				right: var(--border-radius);
			}
		}
	}

	> li > p {
		margin: 0;
	}

	> li > video {
		background: var(--background);
		cursor: pointer;
		border-radius: var(--border-radius);
		margin-bottom: 0.3rem;
	}
}

video[controls] {
	max-height: 80vh;
	margin: auto;
}

main {
	padding-left: var(--gap);
	padding-right: var(--gap);
}

h1 {
	margin-bottom: 0;
	padding: 0;
}

p[placeholder]:empty {
	&::before {
		content: attr(placeholder);
		color: var(--accents-4);
		cursor: text;
	}

	&:focus::before {
		content: "";
	}
}

#drag {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 1000px;
	height: 500px;
	border: 3px dashed white;
	cursor: pointer;
}

@media screen and (max-width: 900px) {
	nav {
		flex-direction: row;
		flex-wrap: wrap;

		> h3 {
			display: none;
		}

		> form {
			width: 100%;

			> input {
				width: 100%;
			}
		}

		> ul,
		> ul:nth-of-type(2) {
			justify-content: center;
			margin-left: 0;
		}

		> ul:last-child {
			display: none;
		}
	}

	nav,
	main {
		padding: 0 0 4px 0;
	}

	ul.clips {
		justify-content: center;
	}
}

